Product Backlog Item 835349: SaaS App Tutorial: eCornell

--- a/docs/identity/saas-apps/toc.yml
+++ b/docs/identity/saas-apps/toc.yml
@@ -407,6 +407,8 @@
         href: easyterritory-tutorial.md
       - name: EBSCO
         href: ebsco-tutorial.md
+      - name: eCornell
+        href: ecornell-tutorial.md
       - name: Edcor
         href: edcor-tutorial.md
       - name: eDigitalResearch
