--- a/docs/identity/saas-apps/toc.yml
+++ b/docs/identity/saas-apps/toc.yml
@@ -890,6 +890,8 @@
         href: netdocuments-tutorial.md
       - name: Netop Portal
         href: netop-portal-tutorial.md
+      - name: Netskope Cloud Security
+        href: netskope-cloud-security-tutorial.md
       - name: Netsuite
         href: netsuite-tutorial.md
       - name: New Relic
