--- a/docs/identity/saas-apps/toc.yml
+++ b/docs/identity/saas-apps/toc.yml
@@ -401,6 +401,8 @@
         href: dynamicsignal-tutorial.md
       - name: Dynatrace
         href: dynatrace-tutorial.md
+      - name: EAB Navigate IMPL
+        href: eab-navigate-impl-tutorial.md
       - name: EAB Navigate Strategic Care
         href: eab-navigate-strategic-care-tutorial.md
       - name: EasyTerritory
