--- a/docs/identity-platform/index.yml
+++ b/docs/identity-platform/index.yml
@@ -28,7 +28,7 @@ landingContent:
             url: authentication-scenarios.md
           - text: Authentication flows and app scenarios
             url: authentication-flows-app-scenarios.md
-          - text: Best practices
+          - text: Best practices and recommendations
             url: identity-platform-integration-checklist.md
       - linkListType: learn
         links:
