Miro Provisioning tutorial

--- a/docs/identity/saas-apps/toc.yml
+++ b/docs/identity/saas-apps/toc.yml
@@ -1591,6 +1591,8 @@
         href: mypolicies-provisioning-tutorial.md
       - name: Mindtickle
         href: mindtickle-provisioning-tutorial.md
+      - name: Miro
+        href: miro-provisioning-tutorial.md
     - name: N - Z
       items:
       - name: Netsuite
