Product Backlog Item 837754: SaaS App Tutorial: Cloudmore

--- a/docs/identity/saas-apps/toc.yml
+++ b/docs/identity/saas-apps/toc.yml
@@ -291,6 +291,8 @@
         href: clickup-productivity-platform-tutorial.md
       - name: Cloud Management Portal for Microsoft Azure
         href: newsignature-tutorial.md
+      - name: Cloudmore
+        href: cloudmore-tutorial.md
       - name: CloudPassage
         href: cloudpassage-tutorial.md
       - name: Cloud Service PICCO
