Product Backlog Item 837753: SaaS App Tutorial: Paylocity

--- a/docs/identity/saas-apps/toc.yml
+++ b/docs/identity/saas-apps/toc.yml
@@ -974,6 +974,8 @@
         href: patentsquare-tutorial.md
       - name: Pavaso Digital Close
         href: pavaso-digital-close-tutorial.md
+      - name: Paylocity
+        href: paylocity-tutorial.md
       - name: Peakon
         href: peakon-tutorial.md
       - name: Pega Systems
