Product Backlog Item 838373: SaaS App Tutorial: Mail Luck!

--- a/docs/identity/saas-apps/toc.yml
+++ b/docs/identity/saas-apps/toc.yml
@@ -810,6 +810,8 @@
         href: lynda-tutorial.md
       - name: M-Files
         href: m-files-tutorial.md
+      - name: Mail Luck!
+        href: mail-luck-tutorial.md
       - name: Manabi Pocket
         href: manabipocket-tutorial.md
       - name: Marketo
