--- a/docs/id-governance/TOC.yml
+++ b/docs/id-governance/TOC.yml
@@ -102,7 +102,7 @@
         href: review-your-access.md
       - name: Complete an access review
         href: complete-access-review.md
-    - name: Azure resource roles
+    - name: Azure AD roles
       items:
       - name: Create an access review
         href: ../privileged-identity-management/pim-how-to-start-security-review.md?toc=%2fazure%2factive-directory%2fgovernance%2ftoc.json
@@ -110,4 +110,11 @@
         href: ../privileged-identity-management/pim-how-to-perform-security-review.md?toc=%2fazure%2factive-directory%2fgovernance%2ftoc.json
       - name: Complete an access review
         href: ../privileged-identity-management/pim-how-to-complete-review.md?toc=%2fazure%2factive-directory%2fgovernance%2ftoc.json
-    
+    - name: Azure resource roles
+      items:
+      - name: Create an access review
+        href: ../privileged-identity-management/pim-resource-roles-start-access-review.md?toc=%2fazure%2factive-directory%2fgovernance%2ftoc.json
+      - name: Review access
+        href: ../privileged-identity-management/pim-resource-roles-perform-access-review.md?toc=%2fazure%2factive-directory%2fgovernance%2ftoc.json
+      - name: Complete an access review
+        href: ../privileged-identity-management/pim-resource-roles-complete-access-review.md?toc=%2fazure%2factive-directory%2fgovernance%2ftoc.json
