--- a/docs/identity-platform/TOC.yml
+++ b/docs/identity-platform/TOC.yml
@@ -34,7 +34,7 @@
       - name: ASP .NET Core
         href: quickstart-v2-aspnet-core-webapp.md
       - name: NodeJS
-        href: https://github.com/AzureADQuickStarts/AppModelv2-WebApp-OpenIDConnect-nodejs
+        href: quickstart-v2-nodejs-webapp.md
       - name: Java
         href: quickstart-v2-java-webapp.md
       - name: Python
