--- a/docs/identity-platform/TOC.yml
+++ b/docs/identity-platform/TOC.yml
@@ -62,7 +62,7 @@
       - name: Python console daemon
         href: quickstart-v2-python-daemon.md
       - name: ASP.NET daemon web app
-        href: https://github.com/Azure-Samples/active-directory-dotnet-daemon-v2
+        href: quickstart-v2-aspnet-daemon-webapp.md
   - name: Tutorials
     items:
     - name: Single-page apps
