--- a/docs/identity/enterprise-apps/toc.yml
+++ b/docs/identity/enterprise-apps/toc.yml
@@ -5,7 +5,7 @@
     items:
      - name: What is cloud app management and single sign-on?
        href: what-is-application-management.md
-     - name: What is automatic user provisioning?
+     - name: What is app provisioning?
        href: user-provisioning.md
      - name: What is Application Proxy for on-premises apps?
        href: what-is-application-proxy.md
@@ -66,11 +66,11 @@
           href: howto-saml-token-encryption.md
         - name: End-user portals
           href: end-user-experiences.md
-    - name: Automatic user provisioning
+    - name: App provisioning
       items:
-       - name: Plan an automatic user provisioning deployment
+       - name: Plan an app provisioning deployment
          href: plan-auto-user-provisioning.md
-       - name: Automatic provisioning for SCIM-enabled apps
+       - name: SCIM app provisioning
          href: use-scim-to-provision-users-and-groups.md
     - name: Application Proxy for on-premises apps
       items:
@@ -223,31 +223,33 @@
             href: access-panel-extension-problem-installing.md
           - name: Error using self-service app access
             href: access-panel-troubleshoot-self-service-access.md
-    - name: Automatic user provisioning
+    - name: App provisioning
       items:
-      - name: Configure user provisioning
+      - name: Configure app provisioning
         items:
-        - name: User provisioning for gallery apps
+        - name: Provisioning for gallery apps
           href: application-provisioning-config-how-to.md
-        - name: Enable automatic user provisioning for multi-tenant apps
+        - name: App provisioning for multi-tenant apps
           href: isv-automatic-provisioning-multi-tenant-apps.md
-        - name: Configure automatic user provisioning
+        - name: Configure app provisioning
           href: configure-automatic-user-provisioning-portal.md
         - name: Customize application attributes
           href: Customize-application-attributes.md
+        - name: Write expressions for attribute mappings
+          href: functions-for-customizing-application-data.md
         - name: Scoping filters
           href: define-conditional-rules-for-provisioning-user-accounts.md
         - name: Skip deletion for out-of-scope users
           href: skip-out-of-scope-deletions.md
         - name: Check provisioning status
           href: application-provisioning-when-will-provisioning-finish-specific-user.md
-        - name: Report on automatic user provisioning
+        - name: Report on app provisioning
           href: check-status-user-account-provisioning.md
         - name: Exporting and importing your configuration
           href: export-import-provisioning-configuration.md  
-      - name: Troubleshoot user provisioning
+      - name: Troubleshoot app provisioning
         items:
-        - name: Troubleshoot user provisioning
+        - name: Troubleshoot app provisioning
           href: application-provisioning-config-problem.md
         - name: Quarantine status
           href: application-provisioning-quarantine-status.md
@@ -257,7 +259,7 @@
           href: user-provisioning-sync-attributes-for-mapping.md
         - name: Taking hours - gallery app
           href: application-provisioning-when-will-provisioning-finish.md
-        - name: Problem saving administrator credentials while configuring user provisioning gallery app
+        - name: Problem saving administrator credentials while configuring provisioning for gallery app
           href: application-provisioning-config-problem-storage-limit.md
         - name: Users are not provisioned - gallery app
           href: application-provisioning-config-problem-no-users-provisioned.md
@@ -357,10 +359,6 @@
           href: application-proxy-understand-cors-issues.md
   - name: Reference
     items:
-    - name: Automatic user provisioning
-      items:
-        - name: Write expressions for attribute mappings
-          href: functions-for-customizing-application-data.md
     - name: Azure AD Connect Provisioning Agent
       items:
        - name: Provisioning Agent version history
