--- a/docs/identity/enterprise-apps/toc.yml
+++ b/docs/identity/enterprise-apps/toc.yml
@@ -17,7 +17,7 @@
       href: view-applications-portal.md
   - name: Tutorials
     items:
-    - name: SaaS apps tutorials
+    - name: Integrated gallery apps (e.g. ServiceNow, Salesforce, Dropbox)
       href: /azure/active-directory/saas-apps/
     - name: Add an on-premises app with Application Proxy
       href: application-proxy-add-on-premises-application.md
