--- a/docs/identity/enterprise-apps/index.yml
+++ b/docs/identity/enterprise-apps/index.yml
@@ -92,11 +92,11 @@ landingContent:
             url: application-proxy-integrate-with-remote-desktop-services.md
           - text: Enable remote access to SharePoint with Azure AD Application Proxy
             url: application-proxy-integrate-with-sharepoint-server.md
-  - title: Secure legacy apps with application delivery controllers and networks (on-premises or cloud)
+  - title: Secure legacy apps with app delivery controllers and networks
     linkLists:
       - linkListType: overview
         links:
-          - text: What is secure hybrid access?
+          - text: Secure hybrid access for legacy apps (cloud and on-premises)
             url: secure-hybrid-access.md
       - linkListType: how-to-guide
         links:
