Product Backlog Item 850570: SaaS App Tutorial: Riva

--- a/docs/identity/saas-apps/toc.yml
+++ b/docs/identity/saas-apps/toc.yml
@@ -1096,6 +1096,8 @@
         href: ringcentral-tutorial.md
       - name: Riskware
         href: riskware-tutorial.md
+      - name: Riva
+        href: riva-tutorial.md
       - name: Robin
         href: robin-tutorial.md
       - name: RStudio Connect
