--- a/docs/identity-platform/TOC.yml
+++ b/docs/identity-platform/TOC.yml
@@ -241,6 +241,8 @@
           href: migrate-android-adal-msal.md
         - name: Migrate to MSAL.iOS and MacOS
           href: migrate-objc-adal-msal.md
+        - name: Migrate to MSAL for Java
+          href: migrate-4jl-adal-msal.md
         - name: Migrate Xamarin apps using brokers from ADAL.NET to MSAL.NET
           href: msal-net-migration-ios-broker.md
       - name: Supported authentication flows
@@ -446,6 +448,12 @@
               href: request-custom-claims.md
             - name: Redirect URI configuration
               href: redirect-uris-ios.md
+        - name: MSAL Java
+          items:
+            - name: Token cache serialization
+              href: msal-java-token-cache-serialization.md
+            - name: Add and remove accounts from the token cache
+              href: msal-java-add-remove-accounts-token-cache.md
     - name: Work with Visual Studio
       items:
       - name: Use the Active Directory connected service
