--- a/docs/identity/saas-apps/toc.yml
+++ b/docs/identity/saas-apps/toc.yml
@@ -179,6 +179,8 @@
         href: bis-tutorial.md
       - name: BitaBIZ
         href: bitabiz-tutorial.md
+      - name: Bitly
+        href: bitly-tutorial.md
       - name: Blackboard Learn
         href: blackboard-learn-tutorial.md
       - name: Blackboard Learn - Shibboleth
