--- a/docs/identity/saas-apps/toc.yml
+++ b/docs/identity/saas-apps/toc.yml
@@ -1601,6 +1601,8 @@
         href: mindtickle-provisioning-tutorial.md
     - name: N - Z
       items:
+      - name: Netskope Administrator Console
+        href: netskope-administrator-console-provisioning-tutorial.md
       - name: Netsuite
         href: netsuite-provisioning-tutorial.md
       - name: Oracle Fusion ERP
