--- a/docs/identity/enterprise-apps/toc.yml
+++ b/docs/identity/enterprise-apps/toc.yml
@@ -68,10 +68,10 @@
           href: end-user-experiences.md
     - name: Application provisioning (SCIM)
       items:
-       - name: Automatic provisioning for SCIM-enabled apps
-         href: use-scim-to-provision-users-and-groups.md
        - name: Plan an automatic user provisioning deployment
          href: plan-auto-user-provisioning.md
+       - name: Manual vs. automatic provisioning 
+         href: application-provisioning-config-how-to.md
     - name: Application Proxy for on-premises apps
       items:
        - name: Application Proxy
@@ -227,10 +227,10 @@
       items:
       - name: Configure app provisioning
         items:
-        - name: Manual vs. automatic provisioning 
-          href: application-provisioning-config-how-to.md
         - name: Configure automatic user provisioning
           href: configure-automatic-user-provisioning-portal.md
+        - name: Use SCIM for automatic provisioning
+          href: use-scim-to-provision-users-and-groups.md
         - name: Customize attribute mappings
           href: Customize-application-attributes.md
         - name: Write expressions for attribute mappings
