--- a/docs/identity-platform/TOC.yml
+++ b/docs/identity-platform/TOC.yml
@@ -242,7 +242,7 @@
         - name: Migrate to MSAL.iOS and MacOS
           href: migrate-objc-adal-msal.md
         - name: Migrate to MSAL Java
-          href: migrate-4jl-adal-msal.md
+          href: migrate-adal-msal-java.md
         - name: Migrate Xamarin apps using brokers from ADAL.NET to MSAL.NET
           href: msal-net-migration-ios-broker.md
       - name: Supported authentication flows
