--- a/docs/identity/saas-apps/toc.yml
+++ b/docs/identity/saas-apps/toc.yml
@@ -588,6 +588,8 @@
         href: hightail-tutorial.md
       - name: HireVue
         href: hirevue-tutorial.md
+      - name: Hootsuite
+        href: hootsuite-tutorial.md
       - name: Hornbill
         href: hornbill-tutorial.md
       - name: Hosted Graphite
