--- a/docs/identity/saas-apps/toc.yml
+++ b/docs/identity/saas-apps/toc.yml
@@ -1406,6 +1406,8 @@
         href: visitorg-tutorial.md
       - name: Visitly
         href: visitly-tutorial.md
+      - name: Visma
+        href: visma-tutorial.md
       - name: Vocoli
         href: vocoli-tutorial.md
       - name: Vodeclic
