Product Backlog Item 860403: SaaS App Tutorial: Motus

--- a/docs/identity/saas-apps/toc.yml
+++ b/docs/identity/saas-apps/toc.yml
@@ -874,6 +874,8 @@
         href: mondaycom-tutorial.md
       - name: Montage Online
         href: montageonline-tutorial.md
+      - name: Motus
+        href: motus-tutorial.md
       - name: MOVEit Transfer - Azure AD integration
         href: moveittransfer-tutorial.md
       - name: Moxi Engage
