[AzureADDS] Final edits and revisions

--- a/docs/entra/identity/domain-services/TOC.yml
+++ b/docs/entra/identity/domain-services/TOC.yml
@@ -23,7 +23,7 @@
       href: tutorial-configure-password-hash-sync.md
     - name: Create an advanced managed domain
       href: tutorial-create-instance-advanced.md
-    - name: Create a forest trust
+    - name: Create a forest trust (preview)
       href: tutorial-create-forest-trust.md
 - name: Samples
   items:
