--- a/docs/identity/saas-apps/toc.yml
+++ b/docs/identity/saas-apps/toc.yml
@@ -1064,6 +1064,8 @@
       items:
       - name: Qlik Sense Enterprise
         href: qliksense-enterprise-tutorial.md
+      - name: Qmarkets Idea & Innovation Management
+        href: qmarkets-idea-innovation-management-tutorial.md
       - name: QPrism
         href: qprism-tutorial.md
       - name: Qualtrics
