--- a/docs/identity/enterprise-apps/toc.yml
+++ b/docs/identity/enterprise-apps/toc.yml
@@ -72,6 +72,10 @@
          href: plan-auto-user-provisioning.md
        - name: Automatic provisioning for SCIM-enabled apps
          href: use-scim-to-provision-users-and-groups.md
+    - name: Cloud HR provisioning
+      items:
+       - name: Plan cloud HR user provisioning deployment
+         href: plan-cloudhr-provisioning.md
     - name: Application Proxy for on-premises apps
       items:
        - name: Application Proxy
