--- a/articles/active-directory/cloud-provisioning/index.yml
+++ b/articles/active-directory/cloud-provisioning/index.yml
@@ -1,6 +1,6 @@
 ### YamlMime:Landing
 
-title: Cloud provisioning 
+title: Azure AD Connect cloud provisioning 
 summary:  Cloud provisioning helps simplify and automate the management of on-premises users by keeping everything in the cloud.
 
 
