--- a/docs/identity/enterprise-apps/toc.yml
+++ b/docs/identity/enterprise-apps/toc.yml
@@ -79,7 +79,7 @@
     - name: Cloud HR provisioning
       items:
        - name: Plan cloud HR user provisioning deployment
-         href: plan-cloudhr-provisioning.md
+         href: plan-cloud-hr-provision.md
     - name: Application Proxy for on-premises apps
       items:
        - name: Application Proxy
