--- a/articles/active-directory/cloud-provisioning/TOC.yml
+++ b/articles/active-directory/cloud-provisioning/TOC.yml
@@ -3,9 +3,9 @@
 - name: Overview
   items:
   - name: What is identity provisioning?
-    href: whatis-prov.md
+    href: what-is-provisioning.md
   - name: What is Azure AD Connect cloud provisioning?
-    href: whatis-cloud-prov.md
+    href: what-is-cloud-provisioning.md
     maintainContext: true
 - name: Tutorials
   expanded: true
@@ -26,7 +26,7 @@
   - name: What is password hash sync?
     href: /azure/active-directory/hybrid/whatis-phs?context=azure/active-directory/cloud-provisioning/context/cloud-provisioning-context
   - name: Understanding the Azure AD schema, attributes, and expressions
-    href: concept-cloud-prov-attributes.md
+    href: concept-attributes.md
   - name: Writing Expressions for Attribute Mappings in Azure Active Directory
     href: reference-expressions.md
     
@@ -37,32 +37,32 @@
   - name: Installation and upgrade
     items:
     - name: Installation Prerequisites
-      href: how-to-cloud-prov-prereq.md
+      href: how-to-prerequisites.md
     - name: Install the Azure AD Connect cloud provisioning agent
-      href: how-to-cloud-prov-install.md
+      href: how-to-install.md
     - name: Cloud provisioning configuration
-      href: how-to-cloud-prov-manage.md
+      href: how-to-configure.md
   - name: Plan and design
     items:
     - name: Topologies and scenarios for Azure AD Connect cloud provisioning
-      href: plan-cloud-prov-topologies.md
+      href: plan-cloud-provisioning-topologies.md
     
      
   - name: Manage 
     items:
-    - name: Agent management
-      href: how-to-cloud-prov-agent.md
+    - name: Agent automatic upgrade
+      href: how-to-automatic-upgrade.md
   - name: Develop
     items:
     - name: Transformations
-      href: how-to-cloud-transformation.md
+      href: how-to-transformation.md
     - name: Azure AD synchronization API 
       href: https://docs.microsoft.com/graph/api/resources/synchronization-overview
   
   - name: Troubleshoot
     items:
     - name: Troubleshoot cloud provisioning
-      href: how-to-cloud-prov-tshoot.md
+      href: how-to-troubleshoot.md
     - name: Duplicate attributes
       href: https://docs.microsoft.com/office365/troubleshoot/administration/duplicate-attributes-prevent-dirsync
     
@@ -71,7 +71,7 @@
   - name: Azure AD Connect cloud provisioning agent version history
     href: /azure/active-directory/manage-apps/provisioning-agent-release-version-history?context=azure/active-directory/cloud-provisioning/context/cp-context
   - name: Azure AD Connect cloud provisioning FAQ
-    href: reference-cloud-prov-faq.md
+    href: reference-cloud-provisioning-faq.md
   - name: Attributes that are synchronized
     href: /azure/active-directory/hybrid/reference-connect-sync-attributes-synchronized?context=azure/active-directory/cloud-provisioning/context/cp-context
   - name: Basic Active Directory and Azure AD environment
