--- a/docs/identity/devices/faq.yml
+++ b/docs/identity/devices/faq.yml
@@ -71,7 +71,7 @@ sections:
         answer: |
           This operation is by design. In this case, the device doesn't have access to resources in the cloud. Administrators can perform this action for stale, lost, or stolen devices to prevent unauthorized access. If this action was performed unintentionally, you need to re-enable or re-register the device using the steps that follow:
           
-          - If the device was disabled in Microsoft Entra ID, an administrator with sufficient privileges can enable it from the Azure portal  
+          - If the device was disabled in Microsoft Entra ID, an administrator with sufficient privileges can enable it in the Microsoft Entra admin center  
             > [!NOTE]
             > If you're syncing devices using Azure AD Connect, hybrid Azure AD joined devices will be automatically re-enabled during the next  sync cycle. So, if you need to disable a Microsoft Entra hybrid joined device, you need to disable it from your on-premises AD
           
