--- a/docs/identity-platform/index.yml
+++ b/docs/identity-platform/index.yml
@@ -209,7 +209,7 @@ additionalContent:
       - title: Connect to Microsoft Graph
         summary: >
           Programmatic access to organizational, user, and application data stored in Azure Active Directory. Call Microsoft Graph from your application to
-          create and manage Microsoft Entra ID users and groups, get and modify your users' data like their profiles, calendars, email, and more.
+          create and manage Microsoft Entra users and groups, get and modify your users' data like their profiles, calendars, email, and more.
         links:
         - url: /graph/overview?toc=/azure/active-directory/develop/toc.json&bc=/azure/active-directory/develop/breadcrumb/toc.json
           text: Microsoft Graph API documentation
